<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Register">

    <EditText
        android:id="@+id/regFirstName"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/regSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/regSurname"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/surname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/regEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regFirstName" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textFilter|textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/regPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regSurname" />

    <EditText
        android:id="@+id/regPassword"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword|textWebPassword"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/regPasswordReEnter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmail"
        tools:text="Password" />

    <EditText
        android:id="@+id/regPasswordReEnter"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword|textWebPassword"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/regBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword"
        tools:text="Password" />

    <Button
        android:id="@+id/regBtn"
        style="style/Widget.MaterialComponents.ContainedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="185dp"
        android:background="@color/teal_700"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPasswordReEnter" />


</androidx.constraintlayout.widget.ConstraintLayout>