<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:backgroundTintMode="multiply"
    android:orientation="vertical"
    android:textAlignment="center"
    android:visibility="visible">

    <TextView
        android:id="@+id/userText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/moodBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:fadingEdge="vertical"
        android:text="@string/mood_tracker"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        android:theme="@style/Theme.MaterialComponents"
        android:typeface="monospace"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/journalBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/fui_bgGitHub"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/infoBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="225dp"
        android:text="@string/info"

        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/black"
        android:textSize="14sp"
        android:typeface="monospace"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiveQsBtn"
        app:strokeColor="@color/fui_bgGitHub"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/chatBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:text="@string/chat"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        android:typeface="monospace"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/fiveQsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/journalBtn"
        app:strokeColor="@color/fui_bgGitHub"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/fiveQsBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"

        android:text="@string/five_q_s"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:theme="@style/Theme.MaterialComponents"

        android:typeface="monospace"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/infoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatBtn"
        app:strokeColor="@color/fui_bgGitHub"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/journalBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:text="@string/journal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:typeface="monospace"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/chatBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodBtn"
        app:strokeColor="@color/fui_bgGitHub"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/logOutBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="239dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="28dp"
        android:text="@string/log_out"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="12sp"
        android:typeface="monospace"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBtn"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>