<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="university.project.inyourshoes.Views.Home">

    <Button
        android:id="@+id/signInButton"
        style="style/Widget.MaterialComponents.ContainedButton"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="100dp"
        android:background="@color/teal_700"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:cornerRadius="500dp"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetButton"
        style="style/Widget.MaterialComponents.ContainedButton"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="545dp"
        android:background="@color/teal_700"
        android:fontFamily="serif"
        android:text="@string/reset_passsword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/regBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        app:cornerRadius="200dp"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        app:buttonSize="wide"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton">

    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/regBtn"
        style="style/Widget.MaterialComponents.ContainedButton"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="452dp"
        android:background="@color/teal_700"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toEndOf="@+id/resetButton"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>